# code-rule

./: .gitignore  README.md  activate.bat  database_schema.md  docker-compose.yml  project_overview.md  requirements.txt  run_backend.bat  run_mysql.bat  tasks.md
backend/: .env.example  .pre-commit-config.yaml  main.py  pyproject.toml  requirements-dev.txt
backend/app/: .env.example  main.py
backend/app/api/routers/: stock.py
backend/app/api/v1/: __init__.py  api.py
backend/app/core/: __init__.py  auth.py  cache.py  config.py  database.py  security.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: __init__.py  data_jobs.py  stock_data.py
backend/core/: database.py  security.py
backend/crud/: crud.py
backend/docs/api/: api.md
backend/docs/database/: database_schema.md
backend/models/: models.py
backend/routers/: stock.py
backend/scripts/: check_vnstock.py  check_vnstock_example.py  run_backend.bat  update_data.py
backend/services/: cache.py  data_jobs.py  stock_data.py
backend/tests/: conftest.py  run_tests.py
backend/tests/api/: test_stock_api.py  test_stock_endpoints.py
backend/tests/services/: test_stock_service.py
frontend/: next.config.js
frontend/src/app/: layout.tsx  page.tsx
library_demos/: README.md
library_demos/vnstock/: README.md  api_reference.md  requirements.txt
library_demos/vnstock/examples/: advanced_features.py  basic_usage.py  company_info.py  data_structures.md  financial_data.py  historical_data.py  stock_screening.py  test_functions.py
